# LOGOS-k

./: README.md  manifesto.md  pyproject.toml
Articles/: LOGOS-κ & SemanticDB  для бизнеса и практиков.md  LOGOS-κ: Исполняемый онтологический протокол для коллективного интеллекта и этики искусственного интеллекта.md
core/: __init__.py  axiom.py  context.py  event.py  relation.py
docs/: integration_guide.md  nigc_specification.md  protocol_spec.md
examples/: hello.lk  journal.lk  lambda_genesis.lk  nigc_demo.lk
interpreter/: evaluator.py  lexer.py  parser.py  repl.py
operators/: __init__.py  phi_ritual.py
semantic_db/: care_protocol.py
tests/: test_operators.py
